@@ -1,0 +1,17 @@
+Hello {$project} developer(s),
+
+A user sent a new comment via LikeBack:
+
+> Version: {$version}
+> Locale:  {$locale}
+> Window:  {$window}
+> Context: {$context}
+> Type:    {$type}
+> Comment:
+{$comment}
+
+To reply to this comment or to change its status, please use this link:
+{$url}
+
+Thank you,
+{$project}'s developing servant, LikeBack
