@@ -10,6 +10,9 @@
  mark, and added warnings if the args string has a wrong number of elements.
  * Added argument === false check in db_fetch_object so failed queries work
  correctly.
+ * Made send.php use the new escaping mechanism too.
+ * Made send.php use the Smarty templating system too, and added a comment
+ e-mail template.
 
 2009-04-18 (dazjorz)
  * Initial import from Likeback backend on the kmess.org webserver.
